--- a/style.css
+++ b/style.css
@@ -1,12 +1,36 @@
+/*
 * {
   box-sizing: border-box;
 }
+*/
 
 body {
-  margin: 0;
-  padding: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   line-height: 1.5;
+}
+
+header {
+  display: flex;
+  width: 100%;
+}
+
+.logo {
+  padding: 30px;
+  line-height: 1.7em;
+  text-decoration: none;
+  justify-items: start;
+}
+
+nav {
+  display: flex;
+}
+
+nav a {
+  padding: 30px;
+}
+
+img {
+  
 }
 
 h1,
